--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native": "0.73.4",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "^3.7.1",
+    "react-native-rename": "^3.2.14",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-vector-icons": "^10.0.0"
