--- a/ios/Podfile
+++ b/ios/Podfile
@@ -25,7 +25,7 @@ if linkage != nil
   use_frameworks! :linkage => linkage.to_sym
 end
 
-target 'upstox' do
+target 'Restaurante' do
   config = use_native_modules!
 
   use_react_native!(
@@ -39,7 +39,7 @@ target 'upstox' do
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
-  target 'upstoxTests' do
+  target 'RestauranteTests' do
     inherit! :complete
     # Pods for testing
   end
